Fixed modal vertical overflow on mobile.
On Chrome and Safari on iOS the bottom of the modal overflowed. Fixed.

--- a/src/modal.scss
+++ b/src/modal.scss
@@ -66,7 +66,7 @@ $body: "div##{$prefix}dialog-body";
     font-size: 16px;
     text-align: left;
     padding: 0 2.5rem 2rem;
-    max-height: calc(80vh - 3.5rem);
+    max-height: calc(80vh - 5.5rem);
     overflow: auto;
 
     h1 {
